--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oracle-idcs-rest-node-sdk",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Oracle IDCS RESTful API Node.js SDK",
   "main": "index.js",
   "scripts": {
@@ -24,12 +24,13 @@
   "homepage": "https://github.com/kenspirit/oracle-idcs-rest-node-sdk",
   "devDependencies": {
     "eslint": "^7.26.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-jest": "^27.0.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-standard": "^5.0.0"
   },
   "dependencies": {
-    "bluebird": "^3.7.2",
-    "requestretry": "^7.0.2"
+    "axios": "^1.2.1",
+    "axios-retry": "^3.6.0"
   }
 }
